2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Try more decent appearance of calendar details separator. (#339540)

	* gtk/gtkcalendar.c: Use different colors for drawing the separator,
	and make it short by one pixel on each side.

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Apply trivial code-style changes from attachement 101101. (#339540)

	* tests/testcalendar.c: Some updates to current GTK+ code-style.

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Restructure testcalendar for testing calendar details. (#339540)

	* tests/testcalendar.c: Push code arround for testing calendar details.

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Implement GtkTooltip API for calendar details. (#339540)

	* gtk/gtkcalendar.c: Add gtk_calendar_query_tooltip and chain it up.
	Remember detail overflows in calendar_paint_day to show the tooltip
	only when neccessary.

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Without setting "detail-width-chars" and "detail-height-rows"
	properties not only the widget has to be redrawn on certain
	conditions, but also its size must be recalculated. (#339540)

	* gtk/gtkcalendar.c: Add calendar_queue_refresh and call
	that function instead of gtk_widget_queue_draw.

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Consider details for size-request and expose-event. (#339540)

	* gtk/gtkcalendar.c: Add gtk_calendar_get_detail and
	is_color_attribute functions. Change gtk_calendar_size_request
	and calendar_paint_day to consider and show calender details.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c: Introduce local priv variables to 
	reduce ->->

2007-12-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c: Correct the default value for the 
	tearoff-title property.

	* gtk/gtkcellrenderertext.c: Fix the default value for the
	wrap-mode and font-scale properties.

	* gtk/gtkaspectratio.c: Fix the default value for the ratio
	property.
